# Parcer_vacancies

./: README.md  main.py  pyproject.toml
src/: api.py  file_saver.py  functions.py  json_saver.py  vacancies.json  vacancy.py
tests/: test_vacancy.py
