[tool.poetry]
name = "parcer-vacancies"
version = "0.1.0"
description = ""
authors = ["Mikhail Gribkov <mishacool4@gmail.com>"]
readme = "README.md"
packages = [{include = "parcer_vacancies"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
